# status-display-notify-send

./: .copier-answers.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
config/: coverage.ini
docs/reference/: cli.md
scripts/: multirun.sh  setup.sh
src/status_display_notify_send/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_cli.py
